# jirachi

./: Cargo.toml  LICENSE  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-07-04-140339_create_seeds/: down.sql  up.sql
res/adjective_noun/: adjectives.txt  nouns.txt
src/: lib.rs  schema.rs
src/adjective_noun/: mod.rs
src/collision_resistant/: mod.rs
src/internal/: seed.rs
src/tests/: mod.rs
tests/: adjective_noun.rs  collision_resistance.rs
