[package]
name = "jirachi"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4", features = ["postgres"]}
diesel_migrations = "1.4.0"
