[package]
name = "jirachi"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"
description = "A collision resistant runtime agnostic key-generator"
repository = "https://github.com/supercmmetry/jirachi"
keywords = ["key", "generator", "jirachi", "collision", "resistant"]
publish = ["jirachi"]
license-file = "LICENSE"
readme = "README.md"
categories = ["backend", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
anyhow = "1.0.31"
