[package]
name = "jirachi"
version = "0.1.2"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"
description = "A collision resistant runtime agnostic key-generator"
repository = "https://github.com/supercmmetry/jirachi"
keywords = ["key", "generator", "jirachi", "collision", "resistant"]
publish = ["crates-io"]
license-file = "LICENSE"
readme = "README.md"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4", features = ["postgres"], optional = true}
dotenv = {version = "0.15.0", optional = true}
anyhow = "1.0.31"
rand = "0.7.3"

[features]
collision-resistant = ["diesel", "dotenv"]

[dev-dependencies]
jirachi = {path = "."}

[[test]]
name = "collision-resistance"
path = "tests/collision_resistance.rs"
required-features = ["collision-resistant"]

[[test]]
name = "adjective-noun"
path = "tests/adjective_noun.rs"
